# graphql-parser

./: CMakeLists.txt  README.md  conanfile.py
include/Dice/: parser.hpp
include/Dice/graphql-parser/: GraphQLParser.hpp  GraphQlParser.hpp
include/Dice/graphql-parser/internal/: Directive.hpp  FieldDefinition.hpp  QueryVisitor.hpp  SchemaVisitor.hpp  TypeDefinitions.hpp
include/Dice/graphql-parser/visitor/: QueryVisitor.hpp  ResponseVisitor.hpp  SchemaVisitor.hpp
tests/: CMakeLists.txt  TestQueryParsing.cpp  TestSchemaParsing.cpp  Tests.cpp
